Fix Scoop Installation

--- a/WindowsTerminal/settings/settings.json
+++ b/WindowsTerminal/settings/settings.json
@@ -85,7 +85,7 @@
             ],
             "font": 
             {
-                "face": "FantasqueSansMono NFM"
+                "face": "FantasqueSansMono Nerd Font"
             },
             "opacity": 85,
             "useAcrylic": true
