--- a/Jarvis/scripts/docker/homebridge/compose.yml
+++ b/Jarvis/scripts/docker/homebridge/compose.yml
@@ -2,14 +2,9 @@ version: "3.8"
 services:
   homebridge:
     container_name: homebridge
-    image: oznu/homebridge:latest
-    restart: always
+    image: oznu/homebridge
     network_mode: host
+    restart: unless-stopped
     volumes:
       - /media/drive1/.config/homebridge:/homebridge
-    logging:
-      driver: json-file
-      options:
-        max-size: "10mb"
-        max-file: "1"
     
