--- a/Jarvis/scripts/docker/media-server/compose.yml
+++ b/Jarvis/scripts/docker/media-server/compose.yml
@@ -1,36 +1,24 @@
 version: "3.8"
 services:
-  deluge:
-    container_name: deluge
-    image: linuxserver/deluge:latest
+  qbittorrent:
+    container_name: qbittorrent
+    image: linuxserver/qbittorrent
     restart: unless-stopped
     network_mode: host
     environment:
       - PUID=${PUID} # default user id, defined in .env
       - PGID=${PGID} # default group id, defined in .env
       - TZ=${TZ} # timezone, defined in .env
+      - WEBUI_PORT=5000
     volumes:
-      - ${ROOT}/.config/deluge:/config
+      - ${ROOT}/.config/qbittorrent:/config
       - ${ROOT}/Downloads:/downloads
-
-  nzbget:
-    container_name: nzbget
-    image: linuxserver/nzbget:latest
-    restart: unless-stopped
-    network_mode: host
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
-      - NZBGET_USER=ritik
-      - NZBGET_PASS=112233
-    volumes:
-      - ${ROOT}/.config/nzbget:/config
-      - ${ROOT}/Downloads:/downloads
+    # username: admin
+    # password: adminadmin
 
   jackett:
     container_name: jackett
-    image: linuxserver/jackett:latest
+    image: linuxserver/jackett
     restart: unless-stopped
     network_mode: host
     environment:
@@ -45,7 +33,7 @@ services:
 
   sonarr:
     container_name: sonarr
-    image: linuxserver/sonarr:latest
+    image: linuxserver/sonarr
     restart: unless-stopped
     network_mode: host
     environment:
@@ -60,7 +48,7 @@ services:
 
   radarr:
     container_name: radarr
-    image: linuxserver/radarr:latest
+    image: linuxserver/radarr
     restart: unless-stopped
     network_mode: host
     environment:
@@ -75,7 +63,7 @@ services:
 
   bazarr:
     container_name: bazarr
-    image: linuxserver/bazarr:latest
+    image: linuxserver/bazarr
     restart: unless-stopped
     network_mode: host
     environment:
@@ -89,7 +77,7 @@ services:
 
   jellyfin:
     container_name: jellyfin
-    image: linuxserver/jellyfin:latest
+    image: linuxserver/jellyfin
     restart: unless-stopped
     network_mode: host
     environment:
