--- a/Jarvis/scripts/docker/homebridge/compose.yml
+++ b/Jarvis/scripts/docker/homebridge/compose.yml
@@ -5,6 +5,15 @@ services:
     image: oznu/homebridge
     network_mode: host
     restart: unless-stopped
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+      - HOMEBRIDGE_CONFIG_UI=1
+      - HOMEBRIDGE_CONFIG_UI_PORT=3000
+      - HOMEBRIDGE_CONFIG_UI_AUTH=1
+      - HOMEBRIDGE_CONFIG_UI_USERNAME=ritik
+      - HOMEBRIDGE_CONFIG_UI_PASSWORD=112233
     volumes:
       - ${ROOT}/.config/homebridge:/homebridge
     
