--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-WindowsTerminal/settings/settings.json*.backup
+Windows/config/windows_terminal/settings/settings.json*.backup
+Windows/config/windows_terminal/settings/state.json.tmp
 **/.env
