--- a/Windows/config/windows_terminal/settings/settings.json
+++ b/Windows/config/windows_terminal/settings/settings.json
@@ -8,6 +8,15 @@
             "keys": "ctrl+w"
         },
         {
+            "command": 
+            {
+                "action": "splitPane",
+                "split": "auto",
+                "splitMode": "duplicate"
+            },
+            "keys": "alt+shift+d"
+        },
+        {
             "command": "unbound",
             "keys": "alt+shift+plus"
         },
@@ -28,25 +37,8 @@
             "keys": "ctrl+shift+w"
         },
         {
-            "command": 
-            {
-                "action": "splitPane",
-                "split": "auto",
-                "splitMode": "duplicate"
-            },
-            "keys": "alt+shift+d"
-        },
-        {
             "command": "find",
             "keys": "ctrl+shift+f"
-        },
-        {
-            "command": 
-            {
-                "action": "copy",
-                "singleLine": false
-            },
-            "keys": "ctrl+c"
         },
         {
             "command": 
@@ -55,6 +47,14 @@
                 "split": "right"
             },
             "keys": "ctrl+d"
+        },
+        {
+            "command": 
+            {
+                "action": "copy",
+                "singleLine": false
+            },
+            "keys": "ctrl+c"
         },
         {
             "command": "paste",
@@ -77,11 +77,13 @@
             "keys": "ctrl+k"
         }
     ],
+    "alwaysShowNotificationIcon": false,
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
     "experimental.rendering.software": false,
     "launchMode": "maximized",
+    "minimizeToNotificationArea": false,
     "profiles": 
     {
         "defaults": 
@@ -96,7 +98,8 @@
                 "face": "FantasqueSansMono Nerd Font"
             },
             "opacity": 85,
-            "useAcrylic": true
+            "useAcrylic": true,
+            "useAtlasEngine": true
         },
         "list": 
         [
@@ -113,7 +116,7 @@
                 "colorScheme": "Campbell",
                 "commandline": "ssh jarvis.local",
                 "guid": "{ad5be843-0c2b-4440-8ba0-42eb32c12c7c}",
-                "icon": "C:\\XtremeSetup\\WindowsTerminal\\img\\raspberry.png",
+                "icon": "C:\\XtremeSetup\\Windows\\config\\windows_terminal\\img\\raspberry.png",
                 "name": "Jarvis"
             },
             {
@@ -399,6 +402,7 @@
     "tabSwitcherMode": "inOrder",
     "tabWidthMode": "equal",
     "themes": [],
+    "trimPaste": true,
     "useAcrylicInTabRow": true,
     "windowingBehavior": "useExisting"
 }
