--- a/Jarvis/scripts/docker/homebridge/compose.yml
+++ b/Jarvis/scripts/docker/homebridge/compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   homebridge:
     container_name: homebridge
-    image: oznu/homebridge
+    image: homebridge/homebridge
     network_mode: host
     restart: unless-stopped
     environment:
