--- a/Jarvis/scripts/docker/homeassistant/compose.yml
+++ b/Jarvis/scripts/docker/homeassistant/compose.yml
@@ -11,6 +11,6 @@ services:
       - PGID=${PGID}
       - TZ=${TZ}
     volumes:
-      - ${ROOT}/.config/homeassistant:/config
+      - ${CONFIG}/homeassistant:/config
       - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro
