--- a/Jarvis/scripts/docker/homebridge/compose.yml
+++ b/Jarvis/scripts/docker/homebridge/compose.yml
@@ -16,4 +16,4 @@ services:
       - HOMEBRIDGE_CONFIG_UI_USERNAME=ritik
       - HOMEBRIDGE_CONFIG_UI_PASSWORD=112233
     volumes:
-      - ${ROOT}/.config/homebridge:/homebridge
+      - ${CONFIG}/homebridge:/homebridge
