--- a/Jarvis/scripts/docker/portrainer/compose.yml
+++ b/Jarvis/scripts/docker/portrainer/compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   portainer:
-    image: portainer/portainer-ee:latest
+    image: portainer/portainer-ce:latest
     container_name: portainer
     ports:
       - "8000:8000"
