--- a/Jarvis/scripts/docker/portrainer/compose.yml
+++ b/Jarvis/scripts/docker/portrainer/compose.yml
@@ -1,14 +1,11 @@
 services:
   portainer:
-    image: portainer/portainer-ce:latest
     container_name: portainer
+    image: portainer/portainer-ce:latest
+    restart: always
     ports:
       - "8000:8000"
       - "9443:9443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
-    restart: always
-
-volumes:
-  portainer_data:
+      - ${CONFIG}/portainer:/data
