--- a/Jarvis/scripts/docker/cloudflared/compose.yml
+++ b/Jarvis/scripts/docker/cloudflared/compose.yml
@@ -1,5 +1,11 @@
 services:
   cloudflared:
-    image: cloudflare/cloudflared:latest
-    command: tunnel --no-autoupdate run --token ${JARVIS_CLOUDFLARED_TOKEN}
+    container_name: cloudflared
+    image: cloudflare/cloudflared
     restart: unless-stopped
+    network_mode: host
+    command: tunnel --no-autoupdate run
+    environment:
+      TUNNEL_TOKEN: ${JARVIS_CLOUDFLARED_TOKEN}
+    volumes:
+      - ${JARVIS_CONFIG_ROOT}/cloudflared:/etc/cloudflared
