--- a/Jarvis/scripts/docker/homeassistant/compose.yml
+++ b/Jarvis/scripts/docker/homeassistant/compose.yml
@@ -1,14 +1,14 @@
 services:
   homeassistant:
     container_name: homeassistant
-    image: "ghcr.io/home-assistant/home-assistant:stable"
-    network_mode: host
+    image: "ghcr.io/home-assistant/home-assistant"
     restart: unless-stopped
+    network_mode: host
     privileged: true
     environment:
-      - TZ=${JARVIS_TZ}
-      - PUID=${JARVIS_PUID}
-      - PGID=${JARVIS_PGID}
+      TZ: ${JARVIS_TZ}
+      PUID: ${JARVIS_PUID}
+      PGID: ${JARVIS_PGID}
     volumes:
       - ${JARVIS_CONFIG_ROOT}/homeassistant:/config
       - /etc/localtime:/etc/localtime:ro
