✨ Setup github auth and signing

--- a/Jarvis/scripts/docker/codeserver/Dockerfile
+++ b/Jarvis/scripts/docker/codeserver/Dockerfile
@@ -12,3 +12,5 @@ RUN echo '{ \
         "workbench.colorTheme": "Material Theme Ocean High Contrast" \
         "workbench.iconTheme": "material-icon-theme" \
     }' > /home/coder/.local/share/code-server/User/settings.json
+
+RUN chown -R coder:coder /home/coder/.local/share/code-server
