--- a/Jarvis/scripts/docker/pihole/compose.yml
+++ b/Jarvis/scripts/docker/pihole/compose.yml
@@ -3,23 +3,18 @@ services:
     container_name: pihole
     image: pihole/pihole
     restart: unless-stopped
+    network_mode: host
     cap_add:
       - NET_ADMIN
     environment:
       TZ: ${JARVIS_TZ}
-      FTLCONF_webserver_api_password: ${JARVIS_PASSWORD}
+      WEBPASSWORD: ${JARVIS_PASSWORD}
       FTLCONF_dns_upstreams: 8.8.8.8;8.8.4.4
-    ports:
-      - 53:53/tcp
-      - 53:53/udp
-      - 67:67/udp
-      - 853:853/tcp
-      - 8080:80/tcp
-      - 8443:443/tcp
+      PIHOLE_DOMAIN: pi.hole
+      DHCP_ACTIVE: true
+      DHCP_ROUTER: 192.168.68.1
+      DHCP_START: 192.168.68.50
+      DHCP_END: 192.168.68.250
     volumes:
       - ${JARVIS_CONFIG_ROOT}/pihole:/etc/pihole
       - ${JARVIS_CONFIG_ROOT}/pihole/dnsmasq.d:/etc/dnsmasq.d
-
-networks:
-  caddy:
-    external: true
