--- a/Jarvis/scripts/docker/03-homeassistant/compose.yml
+++ b/Jarvis/scripts/docker/03-homeassistant/compose.yml
@@ -13,3 +13,9 @@ services:
       - ${JARVIS_CONFIG_ROOT}/homeassistant:/config
       - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.pihole.rule=Host(`home.myjarvis.in`)
+      - traefik.http.routers.pihole.entrypoints=websecure
+      - traefik.http.routers.pihole.tls=true
+      - traefik.http.routers.pihole.tls.certresolver=letsencrypt
